Update and rename dashboard.html to index.html

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@ left:4%;
 			<p style="font-size:13px;"><i>Teacher </i></p>
         </div>
 		<hr>
-  <a href="dashboard.html"  class="active"><img src="dashboard.png" alt="DB">Dashboard</a>
+  <a href="index.html"  class="active"><img src="dashboard.png" alt="DB">Dashboard</a>
   <a href="activity.html"><img src="activity.png" alt="ACT">Activity</a>
     <a href="profile.html"><img src="profile.png" alt="PROF">Profile</a>
 
