--- a/activity.html
+++ b/activity.html
@@ -209,7 +209,7 @@ left:4%;
     <p style="font-size:13px;"><i>Teacher </i></p>
   </div>
   <hr>
-  <a href="dashboard.html"  ><img src="dashboard.png" alt="DB">Dashboard</a>
+  <a href="index.html"  ><img src="dashboard.png" alt="DB">Dashboard</a>
   <a href="activity.html" class="active"><img src="activity.png" alt="ACT">Activity</a>
   <a href="profile.html"><img src="profile.png" alt="PROF">Profile</a>
   <a href="#"><img src="gallery (2).png" alt="gal">Gallery</a>
